# attention-gym

./: .gitignore  pyproject.toml  replicate_error.txt
examples/: nested_bias_grad_fail.py  nested_fail.py
