[project]
authors = [{ name = "Driss Guessous", email = "drisspguessous@gmail.com" }]
dependencies = []
description = "Helpful tools and examples for working with flex-attention"
name = "attn_gym"
requires-python = ">=3.10,<3.11"
version = "0.1.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
numpy = ">=2.2.1,<3"
matplotlib = ">=3.10.0,<4"
attn_gym = { path = ".", editable = true }

[tool.pixi.feature.cuda.pypi-options]
index-strategy = "unsafe-best-match"
extra-index-urls = ["https://download.pytorch.org/whl/nightly/cu118"]

[tool.pixi.feature.cuda.pypi-dependencies]
torch = "==2.6.0.dev20241228"

[tool.pixi.tasks]

[tool.pixi.environments]
cuda = ["cuda"]

[tool.pyright]
typeCheckingMode = "basic"

[dependency-groups]
cuda = ["setuptools>=75.6.0,<76"]
